# shd-planner

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.data  README.md  custom-server.ts  docker-compose.yml  docker-copose.yml.example  package-lock.json  package.json  server.ts  tsconfig.scripts.json  vitest.config.ts
services/shd-planner-mcp/: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  export_to_sheets.py  pyproject.toml  scrape_wiki.py  server.py
services/shd-planner-mcp/data/: brand_sets.json  exotics.json  gear_sets.json  modes.json  named_items.json  skills.json  specializations.json  stats.json  synergies.json  talents_gear.json  talents_weapon.json  weapons.json
services/shd-planner-mcp/div_builds/: 0.00 AboutMe.docx  0.01 iKia's Recommended Builds.docx  0.01 iKia_s Recommended Builds.docx  0.02 iKia_s Recommended Weapons & Talents.docx  Build Showcase.xlsx  CHANGELOG.md  README.md  tank_build
services/shd-planner-mcp/div_builds/iKia.guides/: 0.00 AboutMe.docx  1.0 iKia_s Exotic TL Sourcing Guide.docx  10.0 iKia_s Countdown Guide.docx  (+12 more)
services/shd-planner-mcp/patch_notes/: README.md  update_history.json
services/shd-planner-mcp/pattern/: division2_buildcraft_v1.0_prompt.md
services/shd-planner-mcp/skill/: shd-planner-cwd.md
services/shd-planner-mcp/tests/: test_build_analyzer.py  test_data_loader.py  test_data_validation.py  test_lookup.py  test_stat_calculator.py  test_synergy_engine.py
services/shd-planner-mcp/tools/: build_analyzer.py  data_loader.py  lookup.py  stat_calculator.py  synergy_engine.py
(+188 files in other folders)
